src/objects/Vote__c.object
<CustomObject>
    <fields>
        <fullName>Contestent__c</fullName>
        <label>Contestent</label>
        <referenceTo>Contestent__c</referenceTo>
        <relationshipLabel>Votes</relationshipLabel>
        <relationshipName>Votes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Honesty</fullName>
                </value>
                <value>
                    <fullName>Delegation</fullName>
                </value>
                <value>
                    <fullName>Commitment</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>CASE(TEXT(Quality__c), &quot;Honesty&quot;,5,&quot;Leadership&quot;,9,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vote</label>
    <nameField>
        <displayFormat>VT-{000000}</displayFormat>
        <label>Vote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>